# edge-impulse-linux-sdk-python

./: README.md  lint.toml  pyproject.toml
.github/workflows/: lint.yaml
examples/audio/: classify.py
examples/custom/: classify.py  collect.py
examples/image/: classify-full-frame.py  classify-image.py  classify-video.py  classify.py  device_patches.py  resize_demo.py  set-thresholds.py
src/edge_impulse_linux/: __init__.py  audio.py  image.py  runner.py
