[build-system]
requires = ["setuptools>=61.0", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "edge_impulse_linux"
dynamic = ["version", "readme"]
requires-python = ">=3.10"
description = "Edge Impulse SDK for Linux"
authors = [
    { name = "EdgeImpulse Inc.", email = "hello@edgeimpulse.com" },
]
license = { file = "LICENSE" }
keywords = ["edge-impulse", "machine-learning", "embedded", "linux"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.optional-dependencies]
audio = [
    "numpy>=1.19.5,<3", 
    "pyaudio>=0.2.11,<0.3",
]
image = [
    "opencv-python-headless>=4.5.1",
    "psutil>=5.8.0"
]
all = [
    "edge_impulse_linux[audio]",
    "edge_impulse_linux[image]",
]

[project.urls]
Homepage = "https://www.edgeimpulse.com"
"Bug Tracker" = "https://github.com/edgeimpulse/linux-sdk-python/issues"
Repository = "https://github.com/edgeimpulse/linux-sdk-python"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/edge_impulse_linux/_version.py"
versionfile_build = "edge_impulse_linux/_version.py"
tag_prefix = "v"
parentdir_prefix = "edge_impulse_linux-"
